# learnopengl

./: .clang-format  CMakeLists.txt
resources/shaders/: simple.frag  simple.vert
src/: Application.cpp  Application.h  Game.cpp  Game.h  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
